...
            "state" : "translated",
            "value" : "Sonradan Gir"
          }
        }
      }
    },
    "Log Workout" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antrenman Gir"
          }
...
            "state" : "translated",
            "value" : "Kaydet"
          }
        }
      }
    },
    "Save Workout" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antrenmanı Kaydet"
          }
...
            "state" : "translated",
            "value" : "Antrenman şu ana kadar bitmiş olmalı."
          }
        }
      }
    },
    "Workout Time" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antrenman Saati"
          }
...
            "state" : "translated",
            "value" : "Bu antrenman silinsin mi?"
          }
        }
      }
    },
    "Delete Workout" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antrenmanı Sil"
          }
...
            "state" : "translated",
            "value" : "Mesafe"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bitti"
          }
...
            "state" : "translated",
            "value" : "Gelişimini burada görmek için bir antrenman bitir ya da geçmişini içe aktar."
          }
        }
      }
    },
    "Finish Workout" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antrenmanı Bitir"
          }
...
            "state" : "translated",
            "value" : "dk"
          }
        }
      }
    },
    "More" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diğer"
          }
...
            "state" : "translated",
            "value" : "Sonraki"
          }
        }
      }
    },
    "Next Month" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sonraki Ay"
          }
...
            "state" : "translated",
            "value" : "Önceki seanslara göre %@ yükselişte"
          }
        }
      }
    },
    "Update" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Güncelle"
          }
...
